--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.3",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
